--- a/pug/cards/_card-full-advant-news.pug
+++ b/pug/cards/_card-full-advant-news.pug
@@ -1,7 +1,7 @@
 //- .card-wrap.card-full-wrap.card_advant-news
 .row
 	.col-xl-12
-		.card.card-full.card_advant-news.bg-color-dark-1.margin-bottom-30
+		.card.card-full.card_advant-news.bg-color-dark-1.margin-bottom-15.margin-bottom-lg-30
 			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
@@ -16,7 +16,7 @@
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.card-full__title.font-size-40
+				.card__title.card-full__title.font-size-lg-40.font-size-22
 					a(href='#') Хороший старт!
 				.card__text.card-full__text
 					p
