--- a/pug/cards/_card-half-slider.pug
+++ b/pug/cards/_card-half-slider.pug
@@ -1,7 +1,7 @@
 -var cardSettings = {};
 .row
-	.col-xl-12
-		.card.card-half-slider.margin-bottom-30
+	.col-12
+		.card.card-half-slider
 			.card-half-slider-wrap.card-wrap
 				.card-half-slider__item
 					.card-half-slider__imgbox.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/card-gif.gif);')
