--- a/pug/cards/_cards-half.pug
+++ b/pug/cards/_cards-half.pug
@@ -1,6 +1,6 @@
 .cards.cards-half
 .row
-	.col-xl-6
+	.col-sm-6
 		.card.card-half.card-half_imgbg
 			.card-wrap(style='background-image: url(img/news-half-full-img-01.jpg);')
 				.card__content
@@ -23,7 +23,7 @@
 							| трубы ТЭСЦ-1
 					.card-date.card-date_light
 						span 24 Сентября 2018
-	.col-xl-6
+	.col-sm-6
 		.card.card-half.bg-color-dark-1
 			.card-half-imgbox.card__imgbox(style='background-image: url(img/news-half-img-01.jpg);')
 				.card-average-text
