--- a/pug/cards/_cards-third.pug
+++ b/pug/cards/_cards-third.pug
@@ -1,5 +1,5 @@
 .row
-	.col-xl-4
+	.col-sm-4
 		.card.bg-color-dark-1
 			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-01.jpg);')
 				.card-warning-text.hide
@@ -22,7 +22,7 @@
 						| трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.col-xl-4
+	.col-sm-4
 		.card.bg-color-dark-1
 			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-02.jpg);')
 				.card-warning-text
@@ -45,7 +45,7 @@
 						|  директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
-	.col-xl-4
+	.col-sm-4
 		.card
 			.card-wrap(style='background-image: url(img/news-third-full-img-01.jpg);')
 				.card__content.card__content_sm
