--- a/pug/cards/_cards-two-thirds_left.pug
+++ b/pug/cards/_cards-two-thirds_left.pug
@@ -1,6 +1,6 @@
 //.cards.cards-two-thirds.cards-two-thirds_left
 .row
-	.col-xl-8
+	.col-sm-8
 		.card
 			.card-wrap
 				.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-twothirds-img-01.jpg);')
@@ -24,7 +24,7 @@
 							| трубы ТЭСЦ-1
 					.card-date
 						span 24 Сентября 2018
-	.col-xl-4
+	.col-sm-4
 		.card
 			.card-wrap
 				.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-03.jpg);')
