--- a/pug/cards/_cards-two-thirds_right.pug
+++ b/pug/cards/_cards-two-thirds_right.pug
@@ -1,6 +1,6 @@
 //.cards.cards-two-thirds.cards-two-thirds_right
 .row
-	.col-xl-4
+	.col-sm-4
 		.card.bg-color-dark-1
 			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-04.jpg);')
 				.card-succes-text
@@ -23,7 +23,7 @@
 						|  директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
-	.col-xl-8
+	.col-sm-8
 		.card
 			.card-wrap(style='background-image: url(img/news-twothirds-full-img-01.jpg);')
 				.card__content.card__content_sm
