--- a/pug/modules/_aside.pug
+++ b/pug/modules/_aside.pug
@@ -1,4 +1,4 @@
-#leftNavigationPseudo.left-navigation-pseudo.collapse.show
+#leftNavigationPseudo.menu-left-navigation-pseudo.collapse.show
 //- include ../widgets/_tabwidget-01
 
 include ../widgets/_widget-slider-01
