--- a/pug/page/_page-head-filters.pug
+++ b/pug/page/_page-head-filters.pug
@@ -1,7 +1,7 @@
-.card.card-full.card-full-head
-	.card-wrap.card-full-wrap.card-wrap-head
+//.card.card-full.card-full-head
+//	.card-wrap.card-full-wrap.card-wrap-head
 .row
-	.col-xl-12
+	.col-xl-12.d-none.d-xl-block
 		.card.bg-color-light---.margin-bottom-15
 			.content-title
 				.content-titlebox
