--- a/pug/post.pug
+++ b/pug/post.pug
@@ -60,7 +60,7 @@ block content
 		.comment#commentator_01
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-01.jpg)')
-				.comment__content.padding-all-15.padding-all-15
+				.comment__content.padding-10.padding-xl-15
 					.tagbox.comment__tagbox
 						.tag
 							.comment__nickname
@@ -83,7 +83,7 @@ block content
 			.comment#commentator_02
 				.comment-box
 					.comment__avatar(style='background-image: url(img/person-photo-02.jpg)')
-					.comment__content.padding-all-15
+					.comment__content.padding-10.padding-xl-15
 						.tagbox.comment__tagbox
 							.tag
 								.comment__nickname
@@ -106,7 +106,7 @@ block content
 				.comment#commentator_03
 					.comment-box
 						.comment__avatar(style='background-image: url(img/person-photo-03.jpg)')
-						.comment__content.padding-all-15
+						.comment__content.padding-10.padding-xl-15
 							.tagbox.comment__tagbox
 								.tag
 									.comment__nickname
@@ -131,7 +131,7 @@ block content
 		.comment#commentator_04
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-04.jpg)')
-				.comment__content.padding-all-15
+				.comment__content.padding-10.padding-xl-15
 					.tagbox.comment__tagbox
 						.tag
 							.comment__nickname
@@ -155,7 +155,7 @@ block content
 		.comment#commentator_05
 			.comment-box
 				.comment__avatar(style='background-image: url(img/person-photo-05.jpg)')
-				.comment__content.padding-all-15
+				.comment__content.padding-10.padding-xl-15
 					.tagbox.comment__tagbox
 						.tag
 							.comment__nickname
