--- a/pug/widgets/_widget-succes.pug
+++ b/pug/widgets/_widget-succes.pug
@@ -1,5 +1,5 @@
 // widget succes
-.widget-box
+.widget-box.d-none.d-xl-block
 	.widget-content.widget-content_bdtop.widget-content_dblock
 		.widget-title
 			| ДНЕЙ БЕЗ ТРАВМАТИЗМА
