--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -10,6 +10,9 @@
 		padding-top: 18px;
 		// margin-left: -15px;
 		// margin-right: -15px;
+		@include lg-block {
+			padding-top: 0;
+		}
 	}
 
 	&-title {
@@ -196,17 +199,32 @@
 	}
 	&-count {
 		margin-left: 5px;
+		@include lg-block {
+			margin-left: 2px;
+		}
 	}
 	&-button {
 		margin-left: 5px;
 		color: $dark-color;
 		font-size: 12px;
 		font-weight: 400;
+		@include lg-block {
+			margin-left: 2px;
+			font-size: 10px;
+		}
+		@include sm-block {
+			font-size: 8px;
+			line-height: 1.4;
+			vertical-align: middle;
+		}
 		// transition: color 0.4s ease-out;
 		.icon-comment {
 			display: inline-block;
 			transform: translateY(2px);
 			color: inherit;
+			@include sm-block {
+				transform: translateY(1.5px);
+			}
 		}
 		i {
 			&:before {
