--- a/sass/_header-scroll.scss
+++ b/sass/_header-scroll.scss
@@ -17,20 +17,31 @@
 		&-box {
 			align-items: center;
 			&__logo {
-				flex: 0 0 42.73%;
-				max-width: 42.73%;
+				@include minW('1230px') {
+					flex: 0 0 42.73%;
+					max-width: 42.73%;
+				}
 			}
 			&__question {
-				flex: 0 0 11.11%;
-				max-width: 11.11%;
+				@include minW('1230px'){
+					flex: 0 0 11.11%;
+					max-width: 11.11%;
+
+				}
 			}
 			&__search {
-				flex: 0 0 17.35%;
-				max-width: 17.35%;
+				@include minW('1230px') {
+					flex: 0 0 17.35%;
+					max-width: 17.35%;
+
+				}
 			}
 			&__info {
-				flex: 0 0 28.81%;
-				max-width: 28.81%;
+				@include minW('1230px') {
+					flex: 0 0 28.81%;
+					max-width: 28.81%;
+
+				}
 			}
 
 		}
@@ -46,7 +57,7 @@
 			background-image: none;
 			padding: 0;
 			margin-right: -20px;
-			border-bottom: none;
+			border: none;
 			a {
 				font-size: 12px;
 
@@ -128,6 +139,9 @@
 	}
 	.button-deploy {
 		display: inline-block;
+		@include lg-block {
+			display: none;
+		}
 	}
 	.breadcrumb {
 		padding-top: 3px;
