--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -43,11 +43,16 @@
 	transform: translateZ(0);
 	background-color: #fff;
 	padding-bottom: 15px;
+	@include lg-block {
+		padding-top: 15px;
+		padding-bottom: 0;
+	}
 	@include before {
 		top: 10px;
 		bottom: 9px;
 		left: 50%;
-		margin-left: (-1170px/2);
+		//margin-left: (-1170px/2);
+		transform: translateX(-50%);
 		width: 100%;
 		max-width: 1170px;
 		max-height: 36px;
@@ -56,6 +61,13 @@
 		border-radius: 5px;
 		transition: 0.4s;
 		opacity: 0;
+		@include lg-block {
+			opacity: 1;
+			max-width: 990px;
+		}
+		@include sm-block {
+			max-width: 720px;
+		}
 	}
 	// & + .content {
 	// 	padding-top: 154px;
@@ -67,6 +79,16 @@
 		align-items: flex-end;
 		margin-left: -15px;
 		margin-right: -15px;
+		@include lg-block {
+			align-items: center;
+		}
+		&__item {
+			@include sm-block {
+				width: auto;
+				flex: auto;
+				max-width: none;
+			}
+		}
 		&__logo {
 			display: flex;
 			align-items: center;
@@ -74,18 +96,33 @@
 			width: 100%;
 			flex: 0 0 25%;
 			max-width: 25%;
+			@include lg-block {
+				flex: 0 0 38.73%;
+				max-width: 38.73%;
+			}
 		}
 		&__question {
 			padding: 0 15px;
 			width: 100%;
 			flex: 0 0 16.66667%;
 			max-width: 16.66667%;
+			@include lg-block {
+				flex: 0 0 15.11%;
+				max-width: 15.11%;
+			}
 		}
 		&__search {
 			padding: 0 15px;
 			width: 100%;
 			flex: 0 0 33.33333%;
 			max-width: 33.33333%;
+			@include lg-block {
+				flex: 0 0 17.35%;
+				max-width: 17.35%;
+			}
+			@include sm-block {
+				display: none;
+			}
 		}
 		&__info {
 			display: flex;
@@ -95,6 +132,13 @@
 			width: 100%;
 			flex: 0 0 25%;
 			max-width: 25%;
+			@include lg-block {
+				flex: 0 0 28.81%;
+				max-width: 28.81%;
+			}
+			@include xs-block {
+				display: none;
+			}
 		}
 	}
 	&-logowrap {
@@ -105,13 +149,45 @@
 		display: block;
 		margin-bottom: 7px;
 		margin-left: 15px;
+		@include lg-block {
+			margin-bottom: 0;
+			font-size: 0;
+		}
+		@include sm-block {
+			margin-left: 0;
+		}
 		img {
 			height: 49px;
-			// transition: height 0.3s linear;
+			@include lg-block {
+				height: 25px;
+			}
 			
 		}
 	}
+	&-search {
+		@include lg-block {
+			.form-search__label {
+				padding-top: 2px;
+				padding-bottom: 2px;
+				background-color: #fbfbfb;
+			}
+
+			.form-search__input {
+				display: block;
+				width: 100%;
+				font-size: 12px;
+				line-height: 12px;
+				vertical-align: middle;
+			}
+			.form-search__button {
+				font-size: 12px;
+			}
+		}
+	}
 	&-visit {
+		@include lg-block {
+			display: none;
+		}
 		p {
 			margin-bottom: 8px;
 			color: $thin-color;
@@ -127,22 +203,74 @@
 		margin-bottom: 3px;
 		border-radius: 5px;
 		border: 1px solid #dfdfdf;
+		@include lg-block {
+			background-image: none;
+			padding: 0;
+			margin-right: -20px;
+			border: none;
+		}
+		@include sm-block {
+			margin-left: -15px;
+		}
 		a {
 			font-size: 13px;
 			line-height: 16px;
 			transition-property: color;
+			@include lg-block {
+				font-size: 12px;
+				br {
+					display: none;
+				}
+			}
 		}
 	}
 	&-info {
 		margin-left: -8px;
 		padding-top: 8px;
+		@include lg-block {
+			margin-left: 0;
+			display: flex;
+			flex-wrap: wrap;
+			padding-top: 0;
+		}
+		&-wrap {
+			@include lg-block {
+				margin-left: 15px;
+
+			}
+		}
+		&__time {
+			@include lg-block {
+				font-size: 22px;
+
+			}
+		}
+		&__weather {
+			@include lg-block {
+				font-size: 10px;
+
+			}
+		}
+		&__location {
+			@include lg-block {
+				font-size: 12px;
+
+			}
+		}
 	}
 	&-user {
 		margin-left: 13px;
 		padding-top: 5px;
+		@include lg-block {
+			padding-top: 0;
+			margin-left: auto;
+		}
 		&__box {
 			margin-bottom: 5px;
 			position: relative;
+			@include lg-block {
+				display: none;
+			}
 		}
 		&__name { 
 			
@@ -155,6 +283,13 @@
 			font-size: 0;
 		}
 	}
+	.button {
+		&-help, &-deploy {
+			@include lg-block {
+				display: none;
+			}
+		}
+	}
 	.breadcrumb {
 		position: absolute;
 		top: 0;
@@ -164,6 +299,11 @@
 		background-color: #fff;
 		border: none;
 		border-radius: 0;
+		@include lg-block {
+			position: static;
+			padding-bottom: 15px;
+			padding-top: 0;
+		}
 		&-wrap{
 			position: relative;
 		}
