--- a/css/style.css
+++ b/css/style.css
@@ -8525,15 +8525,30 @@ h2 span,
   }
 }
 
-@media screen and (max-width: 960px) {
-  .row {
-    margin-right: -7.5px;
-    margin-left: -7.5px;
+@media screen and (max-width: 992px) {
+  .header:before {
+    max-width: 720px;
   }
 
-  .row > [class*='col-'] {
-    padding-left: 7.5px;
-    padding-right: 7.5px;
+  .header-box__item {
+    width: auto;
+    -webkit-box-flex: 1;
+    -webkit-flex: auto;
+        -ms-flex: auto;
+            flex: auto;
+    max-width: none;
+  }
+
+  .header-box__search {
+    display: none;
+  }
+
+  .header-logo {
+    margin-left: 0;
+  }
+
+  .header-question {
+    margin-left: -15px;
   }
 
   .header-nav-system__link {
@@ -8545,7 +8560,17 @@ h2 span,
   }
 }
 
-@media screen and (max-width: 780px) {
+@media screen and (max-width: 768px) {
+  .row {
+    margin-right: -7.5px;
+    margin-left: -7.5px;
+  }
+
+  .row > [class*='col-'] {
+    padding-left: 7.5px;
+    padding-right: 7.5px;
+  }
+
   .slider-arrow {
     width: 15px;
   }
@@ -8581,31 +8606,6 @@ h2 span,
     -o-text-overflow: ellipsis;
        text-overflow: ellipsis;
     font-size: 8px;
-  }
-
-  .header:before {
-    max-width: 720px;
-  }
-
-  .header-box__item {
-    width: auto;
-    -webkit-box-flex: 1;
-    -webkit-flex: auto;
-        -ms-flex: auto;
-            flex: auto;
-    max-width: none;
-  }
-
-  .header-box__search {
-    display: none;
-  }
-
-  .header-logo {
-    margin-left: 0;
-  }
-
-  .header-question {
-    margin-left: -15px;
   }
 
   .like-button {
@@ -8678,6 +8678,10 @@ h2 span,
     font-size: 9px;
   }
 
+  .card__title a {
+    max-height: 30px;
+  }
+
   .card__text p {
     font-size: 9px;
   }
@@ -8704,6 +8708,10 @@ h2 span,
     margin-bottom: 0;
     font-size: 20px;
     margin-top: -5px;
+  }
+
+  .card-full__title a {
+    max-height: none;
   }
 
   .card-full__text {
@@ -8807,8 +8815,12 @@ h2 span,
   }
 }
 
-@media screen and (max-width: 560px) {
-  .header-box__info {
+@media screen and (max-width: 576px) {
+  .header:before {
+    max-width: 560px;
+  }
+
+  .header-info {
     display: none;
   }
 }
