--- a/pug/modules/_base.pug
+++ b/pug/modules/_base.pug
@@ -26,10 +26,10 @@ html(lang='ru')
 		section.content.section
 			.container
 				.row
-					.col-sm-3
+					.d-none.d-sm-block.col-sm-3
 						.aside-wrap#aside
 							include _aside
-					.col-sm-9
+					.col-12.col-sm-9
 						.content-group
 							//- block vars
 							
